--- a/extra/src/app/Products/show/show.component.html
+++ b/extra/src/app/Products/show/show.component.html
@@ -8,3 +8,10 @@
   <span>{{i.Name}}</span>
 
 </div>
+
+
+<div *ngIf='showHide'>
+  <h1>This is heading</h1>
+
+</div>
+<button (click)='show()'>show Hide</button>
