--- a/extra/src/app/app.component.html
+++ b/extra/src/app/app.component.html
@@ -1,14 +1,16 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-3">Side bar</div>
-    <div class="col-md-9 red">Working space</div>
-    <button mat-mini-fab color="primary" >Primary</button>
+    <div class="col-lg-12">
+
+
+
+      <button class="btn btn-primary" routerLink='./pro/lc'>Life Cycle</button> &nbsp;
+      <button class="btn btn-primary" routerLink='./pro/show'>Show</button> &nbsp;
+      <button class="btn btn-primary" routerLink='./pro/binding'>Bindings</button> &nbsp;
+
+
+
+      <router-outlet></router-outlet>
+    </div>
   </div>
 </div>
-
-
-
-
-
-
-<router-outlet></router-outlet>
