--- a/extra/src/app/products/binding/binding.component.html
+++ b/extra/src/app/products/binding/binding.component.html
@@ -11,3 +11,18 @@
 
 <button [style.color]="colorbtn"> Restart</button> <br>
 <button [style.background-color]="'green'"> Yes</button>
+
+
+
+<br>
+<button class="red" [class]="applyTheseCssClasses"> Shutdown</button>
+
+
+
+<br>
+
+<button mat-raised-button color="primary" [class]='' class="pull-right color">Save</button>
+
+<div class="container">
+  <button class="color" [ngClass]="addMyClasses()"> Shutdown2</button>
+</div>
