--- a/Ideal/src/app/communicate/first/first.component.html
+++ b/Ideal/src/app/communicate/first/first.component.html
@@ -1,1 +1,23 @@
 <p>first works!</p>
+
+
+<div class="container">
+ <div class="row">
+  <div  class="col-md-12">
+
+  </div>
+ </div>
+
+
+ <div class="row">
+  <div class="col-md-6 offset-md-6 text-right" style="background-color: blueviolet;">
+  <div  style="width: 40%;">
+   <button>Save</button>
+   <button>Cancel</button>
+  </div>
+
+
+  </div>
+ </div>
+
+</div>
