--- a/sample/src/app/app.component.html
+++ b/sample/src/app/app.component.html
@@ -50,6 +50,11 @@
         <a class="nav-link ml-auto" routerLink="css">CSS <span class="sr-only">(current)</span></a>
       </li>
 
+      <li class="nav-item ml-auto active">
+        <a class="nav-link ml-auto" routerLink="final">Final <span class="sr-only">(current)</span></a>
+      </li>
+
+
       <li class="nav-item dropdown ml-auto active">
         <a class="nav-link dropdown-toggle"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Dropdown
