--- a/sample/src/app/communicate/child/child.component.html
+++ b/sample/src/app/communicate/child/child.component.html
@@ -1,1 +1,43 @@
-<p>child works!</p>
+
+<form #f="ngForm" (ngSubmit)=submitForm()> 
+  <div class="form-group row">
+    <label for="inputEmail3" class="col-sm-2 col-form-label">Id</label>
+    <div class="col-sm-5">
+      <input [(ngModel)]="user.id" required #stuId="ngModel" name="id"   type="text" class="form-control" placeholder="Id">
+    </div>
+  </div>
+  <div class="form-group row">
+    <label for="inputEmail3" class="col-sm-2 col-form-label">Name</label>
+    <div class="col-sm-5">
+      <input [(ngModel)]="user.name" required #stuname="ngModel" name="name"   type="text" class="form-control" placeholder="Name">
+    </div>
+  </div> <br>
+  <button [disabled]="!f.valid"   class="btn btn-primary">save</button>
+</form> <br>
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-3">
+      <h3>ID</h3>
+      <p>ID Value : {{ stuId.value }}</p>
+      <p>is ID Valid: {{ stuId.valid }}</p>
+      <p>is ID Touched: {{ stuId.touched }}</p>
+      <p>is ID Dirty: {{ stuId.dirty }}</p>
+    </div>
+    <div class="col-md-3">
+      <h3>Name</h3>
+      <p>Name Value : {{ stuname.value }}</p>
+      <p>is Name valid : {{ stuname.valid }}</p>
+      <p>is Name touched : {{ stuname.touched }}</p>
+      <p>is Name Dirty : {{ stuname.dirty }}</p>
+    </div>
+    <div class="col-md-3">
+      <h3>Form</h3>
+      <p>Form value: {{ f.value | json }}</p>
+      <p>Form valid: {{ f.valid }}</p>
+      <p>Form Touched: {{ f.touched }}</p>
+      <p>Form Dirty: {{ f.dirty }}</p>
+    </div>
+  </div>
+</div>
+
