--- a/sample/src/app/communicate/forth/forth.component.html
+++ b/sample/src/app/communicate/forth/forth.component.html
@@ -1,3 +1,185 @@
-<p>forth works! Send msg</p>
+<!-- <h4>Student</h4>
+<span>{{studendObj.id}}</span><br>
+<span>{{studendObj.name}}</span>  <hr>
 
-<img src="https://images.pexels.com/photos/1149137/pexels-photo-1149137.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" alt="">
+<h4>Teacher</h4>
+<span>{{teacher.id}}</span> <br>
+<span>{{teacher.name}}</span> -->
+
+
+<h4>Student</h4>
+<div *ngFor="let item of studentsList; index as i;">
+   <span>First One !</span> <br>
+   <span>Index Number = {{i}}</span> <br>
+   <span>{{item.id}}</span> <br>
+   <span>{{item.name}}</span>  &nbsp;
+   <i (click)="delete(item.id)" class="fa fa-trash" aria-hidden="true"></i>
+   <hr>
+</div> <br><br>
+
+
+
+
+<button (click)="save()">Save</button>
+
+ <h4>Teacher</h4>
+<div *ngFor="let item of teacherList">
+<span>{{item.id}}</span> <br>
+<span>{{item.name}}</span> <hr>
+</div> 
+
+
+  <p>forth works! Send msg</p>
+
+  <div class="form-group row">
+   <label for="inputEmail3" class="col-sm-2 col-form-label">Id</label>
+   <div class="col-sm-5">
+     <input [(ngModel)]="id"  type="text"  class="form-control"  placeholder="Id">
+   </div>
+ </div>
+
+   <div class="form-group row">
+     <label for="inputEmail3" class="col-sm-2 col-form-label">Name</label>
+     <div class="col-sm-5">
+       <input [(ngModel)]="name"  type="text"  class="form-control"  placeholder="Name">
+     </div>
+   </div>
+ 
+   <br/>  <br/>
+   <div class="form-group row">
+     <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
+     <div class="col-sm-5">
+       <input [(ngModel)]="password" type="password"    class="form-control" placeholder="Password">
+     </div>
+   </div>
+ 
+   <br/>  <br/>
+   <div class="form-group row">
+     <label for="inputPassword3" class="col-sm-2 col-form-label">Description</label>
+     <div class="col-sm-5">
+       <textarea  name ="description" ngModel class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+           </div>
+   </div>
+ 
+   <br/>  <br/>
+   <div class="form-group row">
+     <label for="inputPassword3" class="col-sm-2 col-form-label">Image</label>
+     <div class="col-sm-5">
+       <input type="file"  name ="file" ngModel  class="form-control" id="inputPassword3" placeholder="Password">
+     </div>
+   </div>
+ 
+   <br/>  <br/>
+   <div class="form-group row">
+     <label for="inputPassword3" class="col-sm-2 col-form-label">Birth Day </label>
+     <div class="col-sm-5">
+       <input type="date"  name ="date" ngModel  class="form-control" id="inputPassword3" placeholder="Password">
+     </div>
+   </div>
+ 
+   <br/>  <br/>
+   <fieldset class="form-group">
+     <div class="row">
+       <legend class="col-form-label col-sm-2 pt-0">Gender</legend>
+       <div class="col-sm-5">
+         <div class="form-check">
+           <input [value]="'male'" ngModel name="male" class="form-check-input" type="radio"  id="gridRadios1"  >
+           <label class="form-check-label" for="gridRadios1">
+            Male
+           </label>
+         </div>
+         <div class="form-check">
+           <input [value]="'female'" name ="female" ngModel class="form-check-input" type="radio"  id="gridRadios2" >
+           <label class="form-check-label" for="gridRadios2">
+           Female
+           </label>
+         </div>
+ 
+       </div>
+     </div>
+ 
+ 
+   <br/>  <br/>
+   <div class="form-group row">
+     <div class="col-sm-2">Degree</div>
+     <div class="col-sm-10">
+       <div class="form-check-inline">
+         <label class="form-check">
+           <input id="s1"  name="matric" ngModel type="checkbox" class="form-check-input" [value]="'Matric'">Matric
+         </label>
+       </div>
+       <div class="form-check-inline">
+         <label class="form-check">
+           <input  id="s2"  name="fscs" ngModel type="checkbox" class="form-check-input" [value]="'FSCS'"   >FS.CS
+         </label>
+       </div>
+       <div class="form-check-inline">
+         <label class="form-check">
+           <input id="s3"  name="bscs" ngModel type="checkbox" class="form-check-input" [value]="'BSCS'"   >BSCS
+         </label>
+       </div>
+     </div>
+   </div>
+   </fieldset>
+ 
+ 
+ 
+   <br/>  <br/>
+ <div class="form-group row">
+   <label class="col-form-label col-sm-2 pt-0" >Subject</label>
+   <div class="col-5">
+ 
+ 
+ 
+ 
+ 
+     <select class="control-form" name="select"   ngModel>
+       <option value="">Select Value</option>
+       <option selected value="Math">Math</option>
+       <option value="Physic">Physic</option>
+       <option value="Urdu">Urdu</option>
+       <option value="Science">Science</option>
+ 
+   </select>
+   </div>
+ </div>
+ <br/>  <br/>
+ 
+   <div class="form-group row">
+     <div class="col-sm-10  offset-1">
+       <button (click)="saveUser()" class="btn btn-primary col-4">Sign in</button>
+     </div>
+   </div>
+
+ 
+ 
+ <h1>Records</h1>
+ <div class="row">
+   <div class="col-12">
+     <table class="table">
+       <thead>
+         <tr>
+           <th scope="col">Id</th>
+           <th scope="col">Name</th>
+           <th scope="col">Date of Birth </th>
+ 
+           <th scope="col">Password</th>
+           <th scope="col">Image</th>
+           <th scope="col">Description </th>
+           <th scope="col">Gender </th>
+           <th scope="col">Subjects</th>
+           <th scope="col">Degree</th>
+         </tr>
+       </thead>
+       <tbody>
+         <tr *ngFor="let item of studentsList">
+           <td>{{item.id}}</td>
+           <td>{{item.name}}</td>
+
+         </tr>
+ 
+       </tbody>
+     </table>
+   </div>
+ </div>
+ 
