--- a/sample/src/app/communicate/first/first.component.html
+++ b/sample/src/app/communicate/first/first.component.html
@@ -1,12 +1,19 @@
 <p>first works!</p>
 
-<input #login placeholder="Name">
-<button (click)="getdata(login.value)">Get Name</button>
-
-<div *ngFor="let u of countriesList$ | async">
+ 
+<!-- <div *ngFor="let u of countriesList$ | async">
       {{u.name}}
 </div>
 
 <div *ngFor="let u of countriesList">
    {{u.name}}
-</div>
+</div> -->
+
+ <small #child2 ></small>
+
+ <hr>
+
+ Message from Child: {{msg}}
+ 
+
+ 
