--- a/sample/src/app/extra/extra/extra.component.html
+++ b/sample/src/app/extra/extra/extra.component.html
@@ -1,10 +1,15 @@
 <h2>Extra Works</h2>
 
-<h4>Countries</h4>
+<!-- <h4>Countries</h4>
 <span *ngFor="let country of countries_cities_list">{{country.countries}} <br></span> <br>
 
 <h4>Cities</h4>
 <span *ngFor="let city of countries_cities_list">{{city.cities}} <br></span>
 
+ -->
 
+ <span *ngFor="let item of cList; index as index;">{{index + 1}} =  {{item.body}} <br></span> <br>
+
+
+<span>{{data.title}}</span>
 
