--- a/ideal/src/app/reactive-forms/validation/validation.component.html
+++ b/ideal/src/app/reactive-forms/validation/validation.component.html
@@ -148,6 +148,9 @@
 <button (click)="updateFG()">Update (old FG)</button>
 <button (click)="editFG()">Edit (new FG)</button>
 <button (click)="resetForm()">resetForm</button>
+<button (click)="checkLength()">checkLenght</button>
+
+
 
 
 {{stuFG.getRawValue() | json}} <br>
